--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Rebecca Turner <me@re-becca.org> (http://re-becca.org/)",
   "license": "ISC",
   "dependencies": {
-	"rtf-parser": "git+https://github.com/Romick2005/rtf-parser.git#master"
+	"rtf-parser": "^1.0.4"
   },
   "devDependencies": {
     "weallbehave": "*",
